[package]
name = "lila-tablebase"
version = "1.0.0"
publish = false
description = "A Syzygy tablebase server"
homepage = "https://tablebase.lichess.ovh"
repository = "https://github.com/lichess-org/lila-tablebase"
readme = "README.md"
license = "AGPL-3.0+"
authors = ["Niklas Fiekas <niklas.fiekas@backscattering.de>"]
categories = ["games"]
keywords = ["chess", "syzygy", "tablebase"]
edition = "2021"
build = "build.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
clap = { version = "4", features = ["derive"] }
shakmaty = "0.27"
shakmaty-syzygy = { version = "0.25", features = ["mmap", "variant"], git = "https://github.com/niklasf/shakmaty-syzygy" }
gaviota-sys = "0.1"
arrayvec = { version = "0.7", features = ["serde"] }
serde_with = "3"
moka = { version = "0.12", features = ["future"] }
listenfd = "1"
tower-http = { version = "0.5", features = ["trace"] }
tracing-subscriber = "0.3"
tracing = "0.1"
tracing-timing = "0.6"

[build-dependencies]
vergen = { version = "8.2.4", features = ["git", "gitcl"] }
