[package]
name = "lila-tablebase"
publish = false
description = "A Syzygy tablebase server"
homepage = "https://tablebase.lichess.ovh"
repository = "https://github.com/lichess-org/lila-tablebase"
readme = "README.md"
license = "AGPL-3.0+"
categories = ["games"]
keywords = ["chess", "syzygy", "tablebase"]
edition = "2021"

[dependencies]
axum = "0.8"
axum-content-negotiation = "0.1.2"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
clap = { version = "4", features = ["derive"] }
shakmaty = "0.27"
shakmaty-syzygy = { version = "0.25", features = ["variant", "mmap"] }
gaviota-sys = "0.1"
arrayvec = { version = "0.7", features = ["serde"] }
serde_with = "3"
moka = { version = "0.12", features = ["future"] }
listenfd = "1"
tower-http = { version = "0.6", features = ["trace"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing = "0.1"
antichess-tb-sys = "0.1"
tikv-jemallocator = { version = "0.6", features = ["unprefixed_malloc_on_supported_platforms"] }
tower = "0.5"

[profile.release]
lto = true
